Fix bugged executeCommand using ProcessBuilder as proposed by Gobliins